src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImFontAtlasRect_t ImFontAtlasRect;                    
typedef struct ImFontConfig_t ImFontConfig;                          
typedef struct ImFontLoader_t ImFontLoader;                          
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
struct ImFontConfig_t
{
    char                Name[40];              
    void*               FontData;              
    int                 FontDataSize;          
    bool                FontDataOwnedByAtlas;  
    bool                MergeMode;             
    bool                PixelSnapH;            
    bool                PixelSnapV;            
    ImS8                OversampleH;           
    ImS8                OversampleV;           
    ImWchar             EllipsisChar;          
    float               SizePixels;            
    const ImWchar*      GlyphRanges;           
    const ImWchar*      GlyphExcludeRanges;    
    ImVec2              GlyphOffset;           
    float               GlyphMinAdvanceX;      
    float               GlyphMaxAdvanceX;      
    float               GlyphExtraAdvanceX;    
    ImU32               FontNo;                
    unsigned int        FontLoaderFlags;       
    float               RasterizerMultiply;    
    float               RasterizerDensity;     
    ImFontFlags         Flags;                 
    ImFont*             DstFont;               
    const ImFontLoader* FontLoader;            
    void*               FontLoaderData;        
};
typedef int ImFontAtlasRectId;
#define ImFontAtlasRectId_Invalid -1
struct ImFontAtlasRect_t
{
    unsigned short x, y;      
    unsigned short w, h;      
    ImVec2         uv0, uv1;  
};
struct ImFontAtlas_t
{
    ImFontAtlasFlags          Flags;                                          
    ImTextureFormat           TexDesiredFormat;                               
    int                       TexGlyphPadding;                                
    int                       TexMinWidth;                                    
    int                       TexMinHeight;                                   
    int                       TexMaxWidth;                                    
    int                       TexMaxHeight;                                   
    void*                     UserData;                                       
#ifdef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImTextureRef              TexRef;                                         
#else
    union                     
    {
        ImTextureRef TexRef;
        ImTextureRef TexID;
    };
#endif 
    ImTextureData*            TexData;                                        
    ImVector_ImTextureDataPtr TexList;                                        
    bool                      Locked;                                         
    bool                      RendererHasTextures;                            
    bool                      TexIsBuilt;                                     
    bool                      TexPixelsUseColors;                             
    ImVec2                    TexUvScale;                                     
    ImVec2                    TexUvWhitePixel;                                
    ImVector_ImFontPtr        Fonts;                                          
    ImVector_ImFontConfig     Sources;                                        
    ImVec4                    TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX+1];  
    int                       TexNextUniqueID;                                
    int                       FontNextUniqueID;                               
    ImVector_ImDrawListSharedDataPtr DrawListSharedDatas;                     
    ImFontAtlasBuilder*       Builder;                                        
    const ImFontLoader*       FontLoader;                                     
    const char*               FontLoaderName;                                 
    void*                     FontLoaderData;                                 
    unsigned int              FontLoaderFlags;                                
    int                       RefCount;                                       
    ImGuiContext*             OwnerContext;                                   
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImFontAtlasRect           TempRect;                                       
#endif 
};
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesKorean(ImFontAtlas* self);                   
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesJapanese(ImFontAtlas* self);                 
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseFull(ImFontAtlas* self);              
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseSimplifiedCommon(ImFontAtlas* self);  
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesCyrillic(ImFontAtlas* self);                 
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesThai(ImFontAtlas* self);                     
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesVietnamese(ImFontAtlas* self);               
CIMGUI_API ImFontAtlasRectId ImFontAtlas_AddCustomRect(ImFontAtlas* self, int width, int height, ImFontAtlasRect* out_r );  
CIMGUI_API void              ImFontAtlas_RemoveCustomRect(ImFontAtlas* self, ImFontAtlasRectId id);                                     
CIMGUI_API bool              ImFontAtlas_GetCustomRect(const ImFontAtlas* self, ImFontAtlasRectId id, ImFontAtlasRect* out_r);          
CIMGUI_API ImFontAtlasRectId      ImFontAtlas_AddCustomRectRegular(ImFontAtlas* self, int w, int h);                                                                                          
CIMGUI_API const ImFontAtlasRect* ImFontAtlas_GetCustomRectByIndex(ImFontAtlas* self, ImFontAtlasRectId id);                                                                                  
CIMGUI_API void                   ImFontAtlas_CalcCustomRectUV(const ImFontAtlas* self, const ImFontAtlasRect* r, ImVec2* out_uv_min, ImVec2* out_uv_max);                                    
CIMGUI_API ImFontAtlasRectId      ImFontAtlas_AddCustomRectFontGlyph(ImFontAtlas* self, ImFont* font, ImWchar codepoint, int w, int h, float advance_x, ImVec2 offset );  
CIMGUI_API ImFontAtlasRectId      ImFontAtlas_AddCustomRectFontGlyphForSize(ImFontAtlas* self, ImFont* font, float font_size, ImWchar codepoint, int w, int h, float advance_x, ImVec2 offset ); 
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );
typedef ImFontAtlasRect ImFontAtlasCustomRect;