src/Sdl3Sharp.ImGui/Native/ImFontAtlas.cs


    /// <summary>
    /// Default + Korean characters
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesKorean")]
    public static partial ushort* GetGlyphRangesKorean(ImFontAtlas* self);

    /// <summary>
    /// Default + Hiragana, Katakana, Half-Width, Selection of 2999 Ideographs
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesJapanese")]
    public static partial ushort* GetGlyphRangesJapanese(ImFontAtlas* self);

    /// <summary>
    /// Default + Half-Width + Japanese Hiragana/Katakana + full set of about 21000 CJK Unified Ideographs
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesChineseFull")]
    public static partial ushort* GetGlyphRangesChineseFull(ImFontAtlas* self);

    /// <summary>
    /// Default + Half-Width + Japanese Hiragana/Katakana + set of 2500 CJK Unified Ideographs for common simplified Chinese
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesChineseSimplifiedCommon")]
    public static partial ushort* GetGlyphRangesChineseSimplifiedCommon(ImFontAtlas* self);

    /// <summary>
    /// Default + about 400 Cyrillic characters
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesCyrillic")]
    public static partial ushort* GetGlyphRangesCyrillic(ImFontAtlas* self);

    /// <summary>
    /// Default + Thai characters
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesThai")]
    public static partial ushort* GetGlyphRangesThai(ImFontAtlas* self);

    /// <summary>
    /// Default + Vietnamese characters
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesVietnamese")]
    public static partial ushort* GetGlyphRangesVietnamese(ImFontAtlas* self);

    /// <summary>
    /// Register and retrieve custom rectangles
    /// - You can request arbitrary rectangles to be packed into the atlas, for your own purpose.
    /// - Since 1.92.0, packing is done immediately in the function call (previously packing was done during the Build call)
    /// - You can render your pixels into the texture right after calling the AddCustomRect() functions.
    /// - VERY IMPORTANT:
    /// - Texture may be created/resized at any time when calling ImGui or ImFontAtlas functions.
    /// - IT WILL INVALIDATE RECTANGLE DATA SUCH AS UV COORDINATES. Always use latest values from GetCustomRect().
    /// - UV coordinates are associated to the current texture identifier aka 'atlas-&gt;TexRef'. Both TexRef and UV coordinates are typically changed at the same time.
    /// - If you render colored output into your custom rectangles: set 'atlas-&gt;TexPixelsUseColors = true' as this may help some backends decide of preferred texture format.
    /// - Read docs/FONTS.md for more details about using colorful icons.
    /// - Note: this API may be reworked further in order to facilitate supporting e.g. multi-monitor, varying DPI settings.
    /// - (Pre-1.92 names) ------------&gt; (1.92 names)
    /// - GetCustomRectByIndex()   --&gt; Use GetCustomRect()
    /// - CalcCustomRectUV()       --&gt; Use GetCustomRect() and read uv0, uv1 fields.
    /// - AddCustomRectRegular()   --&gt; Renamed to AddCustomRect()
    /// - AddCustomRectFontGlyph() --&gt; Prefer using custom ImFontLoader inside ImFontConfig
    /// - ImFontAtlasCustomRect    --&gt; Renamed to ImFontAtlasRect
    /// Register a rectangle. Return -1 (ImFontAtlasRectId_Invalid) on error.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddCustomRect")]
    public static partial ImFontAtlasRectId AddCustomRect(ImFontAtlas* self, int width, int height, ImFontAtlasRect* out_r);

    /// <summary>
    /// Unregister a rectangle. Existing pixels will stay in texture until resized / garbage collected.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_RemoveCustomRect")]
    public static partial void RemoveCustomRect(ImFontAtlas* self, ImFontAtlasRectId id);

    /// <summary>
    /// Get rectangle coordinates for current texture. Valid immediately, never store this (read above)!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetCustomRect")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool GetCustomRect(ImFontAtlas* self, ImFontAtlasRectId id, ImFontAtlasRect* out_r);

    /// <summary>
    /// RENAMED in 1.92.0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddCustomRectRegular")]
    public static partial ImFontAtlasRectId AddCustomRectRegular(ImFontAtlas* self, int w, int h);

    /// <summary>
    /// OBSOLETED in 1.92.0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetCustomRectByIndex")]
    public static partial ImFontAtlasRect* GetCustomRectByIndex(ImFontAtlas* self, ImFontAtlasRectId id);

    /// <summary>
    /// OBSOLETED in 1.92.0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_CalcCustomRectUV")]
    public static partial void CalcCustomRectUV(ImFontAtlas* self, ImFontAtlasRect* r, ImVec2* out_uv_min, ImVec2* out_uv_max);

    /// <summary>
    /// OBSOLETED in 1.92.0: Use custom ImFontLoader in ImFontConfig
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddCustomRectFontGlyph")]
    public static partial ImFontAtlasRectId AddCustomRectFontGlyph(ImFontAtlas* self, ImFont* font, ushort codepoint, int w, int h, float advance_x, ImVec2 offset);

    /// <summary>
    /// ADDED AND OBSOLETED in 1.92.0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddCustomRectFontGlyphForSize")]
    public static partial ImFontAtlasRectId AddCustomRectFontGlyphForSize(ImFontAtlas* self, ImFont* font, float font_size, ushort codepoint, int w, int h, float advance_x, ImVec2 offset);

}
